<resources>
    <string name="app_name">ContactsApp</string>
    <string name="contacts_title">Contacts</string>
    <string name="contact_detail_title">Contact Detail</string>
    <string name="add_contact_title">Add Contact</string>

    <string name="menu_add_new">Add New</string>
    <string name="menu_delete">Delete</string>

    <string name="contact_name">Name</string>
    <string name="contact_surname">Surname</string>
    <string name="contact_number">Number</string>
    <string name="contact_company">Company</string>
    <string name="contact_department">Department</string>
    <string name="contact_email">Email</string>
    <string name="update_contact">Update</string>
    <string name="add_contact">Add Contact</string>
    <string name="search_by_name">Search by name</string>
</resources>